--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,10 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登录</a></li>
+                <!--
+                <li><a href="https://github.com/login/oauth/authorize?client_id=846e7f8a799522f4f925&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登录</a></li>
+                -->
+                <li><a href="https://gitee.com/oauth/authorize?client_id=c607e7a8611f632eaac5533ef146d0eedfabf082f54fd94e8eb6003b6ec91836&redirect_uri=http://127.0.0.1:8888/geecallback&response_type=code">登录</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">我 <span class="caret"></span></a>
@@ -42,5 +45,6 @@
         </div>
     </div>
 </nav>
+<p th:text = "'hello ' + ${name} + '!'"/>
 </body>
 </html>
